# saturn-air-bot

./: README.md  pyproject.toml
data/: faq_document.txt
docs/: report.md
outputs/: sample_queries.json
src/: app.py  build_index.py  evaluator.py  query.py
tests/: test_build_index.py  test_query.py
